--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
+    "build": "webpack",
     "dev": "webpack serve",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   }
